#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2024, SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
ash = { git = "https://github.com/SkillerRaptor/ash" }
ash-window = { git = "https://github.com/SkillerRaptor/ash" }
glam = "0.28"
gpu-allocator = "0.27"
hassle-rs = "0.11"
log = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
raw-window-handle = "0.6"
syn = { version = "2.0", features = ["extra-traits"] }
thiserror = "1.0"
winit = "0.30"
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Threading",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true

[profile.production]
inherits = "release"
codegen-units = 1
strip = true
lto = true
