#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2024, SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
ash = { git = "https://github.com/SkillerRaptor/ash" }
ash-window = { git = "https://github.com/SkillerRaptor/ash" }
bitflags = "2.6"
bytemuck = { version = "1.16", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
downcast-rs = "1.2.1"
glam = { version = "0.28", features = ["bytemuck"] }
gpu-allocator = { git = "https://github.com/SkillerRaptor/gpu-allocator" }
hassle-rs = "0.11"
raw-window-handle = "0.6"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
winit = "0.30"
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Threading",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true

[profile.production]
inherits = "release"
codegen-units = 1
strip = true
lto = true
