#-------------------------------------------------------------------------------------------
# Copyright (c) 2020-2021, SkillerRaptor <skillerraptor@protonmail.com>
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# ThirdParty
#-------------------------------------------------------------------------------------------
add_subdirectory(ThirdParty)

#-------------------------------------------------------------------------------------------
# Tests
#-------------------------------------------------------------------------------------------
if(ENABLE_TESTING)
    enable_testing()
    add_subdirectory(Test)
endif()

#-------------------------------------------------------------------------------------------
# Engine
#-------------------------------------------------------------------------------------------
# add_subdirectory(Engine)

#-------------------------------------------------------------------------------------------
# Editor
#-------------------------------------------------------------------------------------------
# add_subdirectory(Editor)
