#-------------------------------------------------------------------------------------------
# Copyright (c) 2020-2021, SkillerRaptor <skillerraptor@protonmail.com>
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# ThirdParty
#-------------------------------------------------------------------------------------------
add_subdirectory(ThirdParty)

#-------------------------------------------------------------------------------------------
# Engine
#-------------------------------------------------------------------------------------------
# add_subdirectory(Engine)

#-------------------------------------------------------------------------------------------
# Editor
#-------------------------------------------------------------------------------------------
# add_subdirectory(Editor)
