#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-present, SkillerRaptor <skillerraptor@protonmail.com>
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# hyper common
#-------------------------------------------------------------------------------------------
add_subdirectory(hyper_common)

#-------------------------------------------------------------------------------------------
# hyper platform
#-------------------------------------------------------------------------------------------
add_subdirectory(hyper_platform)

#-------------------------------------------------------------------------------------------
# hyper game
#-------------------------------------------------------------------------------------------
add_subdirectory(hyper_game)

#-------------------------------------------------------------------------------------------
# hyper engine
#-------------------------------------------------------------------------------------------
set(HYPER_MODULES
		hyper_game
		hyper_platform)

add_subdirectory(hyper_engine)
