#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-present, SkillerRaptor <skillerraptor@protonmail.com>
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# hyper common
#-------------------------------------------------------------------------------------------
add_subdirectory(hyper_common)

#-------------------------------------------------------------------------------------------
# hyper math & hyper platform
#-------------------------------------------------------------------------------------------
add_subdirectory(hyper_math)
add_subdirectory(hyper_platform)

#-------------------------------------------------------------------------------------------
# hyper game & hyper rendering
#-------------------------------------------------------------------------------------------
add_subdirectory(hyper_game)
add_subdirectory(hyper_rendering)

#-------------------------------------------------------------------------------------------
# hyper engine
#-------------------------------------------------------------------------------------------
add_subdirectory(hyper_engine)
