#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
num-traits = "0.2"
thiserror = "1.0"
