#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
color-eyre = { version = "0.6", default-features = false }
log = "0.4"
