#-------------------------------------------------------------------------------------------
# Copyright (c) 2022-2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "hyper_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper_engine = { path = "../hyper_engine" }

chrono = "0.4"
color-eyre = "0.6"
fern = { version = "0.6", features = [ "colored" ] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tracy = "0.10"
